2001-07-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in (set): Call write_profiles.
	(xml_parse): Call xml_parse_profiles.
	(xml_parse_profiles): Get "profiles" tag contents from read
	xml document and set it in "profiles" key of data hash.
	(write_profiles): If $$hash{"profiles"} is not empty,
	save it to profiles.xml location.

	* xml.pl.in (xst_xml_scan_recurse): Removed use of global
	array xst_xml_scan_list.
	(xst_xml_scan): Now optionally receives a tool structure.
	The read document is stored inside the tool structure.

	* users-conf.in (add_user): mkdir -p the parent directories
	of the new user.
	(get): receive tool as argument. This structure is passed
	to all directive handlers by xml_run_directive as the first
	argument.
	(set): same. Pass it to xml_parse.
	(filter): same.
	
2001-07-18  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_alchemist): Implement. Top-level function
	  for replacing alchemist data.

2001-07-18  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_xml_pcdata_with_type): Implement.
	  (xst_replace_xml_attribute_with_type): Implement. These are helper
	  functions for alchemist-like XML files.

2001-07-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in (add_user): mkdir -p the parent directories
	of the new user.

2001-07-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in (write_logindefs): Old xst_report_warning
	call that slipped.
	Enabled command reporting.
	Removed all global data variables in the backend. Delete
	user no works. Style corrections. This thing is old.

Sun Jul 15 07:46:23 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_parse_table): userifacectl
	reveals if distro is capable of letting mortal users to control
	interface activation.

2001-07-17  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_open_write_compressed): Implement.
